--- a/languages/ci/locale/en_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_CA/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-29 17:09+0300\n"
-"PO-Revision-Date: 2013-04-27 22:32+0200\n"
+"PO-Revision-Date: 2013-04-29 21:56+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -817,9 +816,9 @@ msgstr "Language Lessons ? CoursParticuliers.com"
 
 #: ../code/application/views/includes/side_search_box.php:16
 #: ../code/application/views/helpfile/pofields.php:828
-#, fuzzy, php-format
+#, php-format
 msgid "Enter your dates"
-msgstr "Enter dates"
+msgstr "Enter your dates"
 
 #: ../code/application/views/includes/side_search_box.php:18
 #: ../code/application/views/mobile/city_view.php:4
@@ -4642,7 +4641,6 @@ msgid "Date"
 msgstr "Date"
 
 #: ../code/application/views/hw/booking_end_view.php:165
-#, fuzzy
 msgid "Amount already paid"
 msgstr "Amount already paid:"
 
@@ -4856,16 +4854,16 @@ msgstr "Your Selection"
 #: ../code/application/views/hw/booking_avail_view.php:744
 #: ../code/application/views/hw/booking_view.php:125
 #: ../code/application/views/hw/booking_view.php:1047
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"You only pay the deposit (10%% of total amount) to confirm and secure your "
-"reservation now. The remaining amount (90%%) is payable upon arrival. You "
-"will find the property's contact information (email, address, telephone "
+"You only pay the deposit (%d%% of total amount) to confirm and secure your "
+"reservation now. The remaining amount (%d%%) is payable upon arrival. You "
+"will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 
 #: ../code/application/views/hw/booking_avail_view.php:749
@@ -4883,9 +4881,9 @@ msgstr "You got the best price"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hw/booking_view.php:303
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d%%)"
-msgstr "Deposit to be paid now (%d)"
+msgstr "Deposit to be paid now (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:790
 #: ../code/application/views/hw/booking_avail_view.php:886
@@ -4946,9 +4944,9 @@ msgid "Prix (lit)"
 msgstr "Price"
 
 #: ../code/application/views/hw/booking_avail_view.php:978
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d%%)"
-msgstr "Deposit (%d)"
+msgstr "Deposit (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:1007
 #: ../code/application/views/hw/booking_avail_view.php:1013
