--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-29 17:09+0300\n"
-"PO-Revision-Date: 2013-04-27 21:20+0200\n"
+"PO-Revision-Date: 2013-04-29 21:32+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -814,9 +813,9 @@ msgstr " "
 
 #: ../code/application/views/includes/side_search_box.php:16
 #: ../code/application/views/helpfile/pofields.php:828
-#, fuzzy, php-format
+#, php-format
 msgid "Enter your dates"
-msgstr "Syötä päivämäärät"
+msgstr "Merkitse päivämäärät"
 
 #: ../code/application/views/includes/side_search_box.php:18
 #: ../code/application/views/mobile/city_view.php:4
@@ -1077,7 +1076,7 @@ msgstr "Sivukartta"
 #: ../code/application/views/helpfile/pofields.php:829
 #, php-format
 msgid "Information"
-msgstr "Tiedot"
+msgstr "Tieto"
 
 #: ../code/application/views/includes/footer.php:86
 #: ../code/application/views/includes/header_book.php:144
@@ -1133,7 +1132,7 @@ msgstr ""
 "sivusto nro 1 Suomessa, Saksassa, Espanjassa ja Kanadassa. %s tarjoaa viime "
 "hetken edulliset hostelli- ja retkeilymajavaraukset Pariisissa, Lontoossa, "
 "Barcelonassa, New Yorkissa, Roomassa, Amsterdamissa, Dublinissa, Madridissa, "
-"Prahassa... Suunnittele matkasi helposti, tarjoamme myös karttoja, "
+"Prahassa… Suunnittele matkasi helposti, tarjoamme myös karttoja, "
 "kohdeoppaita ja käyttäjäarvosteluja juuri sen oikean majoituksen "
 "löytämiseksi."
 
