--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -820,9 +820,9 @@ msgstr "Cours de Langues ? CoursParticuliers.com"
 
 #: ../code/application/views/includes/side_search_box.php:16
 #: ../code/application/views/helpfile/pofields.php:828
-#, fuzzy, php-format
+#, php-format
 msgid "Enter your dates"
-msgstr "Choisir Dates"
+msgstr "Indiquez vos dates"
 
 #: ../code/application/views/includes/side_search_box.php:18
 #: ../code/application/views/mobile/city_view.php:4
@@ -1085,7 +1085,7 @@ msgstr "Navigation"
 #: ../code/application/views/helpfile/pofields.php:829
 #, php-format
 msgid "Information"
-msgstr "Information"
+msgstr "Informations"
 
 #: ../code/application/views/includes/footer.php:86
 #: ../code/application/views/includes/header_book.php:144
@@ -4692,7 +4692,6 @@ msgid "Date"
 msgstr "Date"
 
 #: ../code/application/views/hw/booking_end_view.php:165
-#, fuzzy
 msgid "Amount already paid"
 msgstr "Montant déjà payé:"
 
@@ -4910,18 +4909,17 @@ msgstr "Votre Sélection"
 #: ../code/application/views/hw/booking_avail_view.php:744
 #: ../code/application/views/hw/booking_view.php:125
 #: ../code/application/views/hw/booking_view.php:1047
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Vous ne payez que le dépôt (10%% du montant total) pour confirmer et "
-"garantir votre réservation. Le montant restant (90%%) est payable à votre "
-"arrivée. Vous trouverez les coordonnées de l’établissement (email, adresse, "
-"numéro de téléphone ...) dans votre courriel de confirmation après avoir "
-"effectué votre réservation."
+"Zaplatíte nyní pouze zálohu (%d%% z celkové částky) jako potvrzení a "
+"zajištění vaší rezervace. Zbývající částku (%d%%) splatíte při příjezdu. "
+"Informaci o ubytovacím zařízení (email,adresu,telefonní číslo...) naleznete "
+"v potvrzujícím emailu po dokončení rezervace."
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
@@ -4938,9 +4936,9 @@ msgstr "Vous avez obtenu le meilleur prix"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hw/booking_view.php:303
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d%%)"
-msgstr "Dépôt à payer maintenant (%d)"
+msgstr "Dépôt à payer maintenant (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:790
 #: ../code/application/views/hw/booking_avail_view.php:886
@@ -5002,9 +5000,9 @@ msgid "Prix (lit)"
 msgstr "Prix"
 
 #: ../code/application/views/hw/booking_avail_view.php:978
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d%%)"
-msgstr "Dépôt (%d)"
+msgstr "Dépôt (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:1007
 #: ../code/application/views/hw/booking_avail_view.php:1013
