--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-29 17:09+0300\n"
-"PO-Revision-Date: 2013-04-27 23:37+0200\n"
+"PO-Revision-Date: 2013-04-29 21:27+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -823,9 +823,9 @@ msgstr " "
 
 #: ../code/application/views/includes/side_search_box.php:16
 #: ../code/application/views/helpfile/pofields.php:828
-#, fuzzy, php-format
+#, php-format
 msgid "Enter your dates"
-msgstr "Entre com as datas"
+msgstr "Insira as datas"
 
 #: ../code/application/views/includes/side_search_box.php:18
 #: ../code/application/views/mobile/city_view.php:4
@@ -1086,7 +1086,7 @@ msgstr "Navegação"
 #: ../code/application/views/helpfile/pofields.php:829
 #, php-format
 msgid "Information"
-msgstr "Informações"
+msgstr "Informação"
 
 #: ../code/application/views/includes/footer.php:86
 #: ../code/application/views/includes/header_book.php:144
@@ -4678,7 +4678,6 @@ msgid "Date"
 msgstr "Data"
 
 #: ../code/application/views/hw/booking_end_view.php:165
-#, fuzzy
 msgid "Amount already paid"
 msgstr "Valor já pago:"
 
@@ -4896,17 +4895,17 @@ msgstr "Sua seleção"
 #: ../code/application/views/hw/booking_avail_view.php:744
 #: ../code/application/views/hw/booking_view.php:125
 #: ../code/application/views/hw/booking_view.php:1047
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-" Agora você só paga um depósito (10%% do valor total) para confirmar e "
-"garantir sua reserva. O restante (90%%) será pago na chegada. Encontrará "
-"informações sobre o estabalecimento escolhido (endereço de email, número de "
-"telefone ...) no e-mail de confirmação depois de ter efetuado sua reserva."
+"Você apenas faz o depósito (%d%% do valor total) para confirmar e assegurar "
+"a sua reserva agora. O valor restante (%d%%) é pago na chegada. Você irá "
+"encontrar informações de contato do proprietário (e-mail, endereço, número "
+"de telefone…) no seu e-mail de confirmação depois de ter feito a sua reserva."
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
@@ -4923,9 +4922,9 @@ msgstr "Você obteve o melhor preço!"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hw/booking_view.php:303
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d%%)"
-msgstr "Depósito a ser pago agora (%d)"
+msgstr "Depósito a ser pago agora (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:790
 #: ../code/application/views/hw/booking_avail_view.php:886
@@ -4986,9 +4985,9 @@ msgid "Prix (lit)"
 msgstr "Preço (preço por pessoa)"
 
 #: ../code/application/views/hw/booking_avail_view.php:978
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d%%)"
-msgstr "Depósito (%d)"
+msgstr "Depósito (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:1007
 #: ../code/application/views/hw/booking_avail_view.php:1013
