--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-29 17:09+0300\n"
-"PO-Revision-Date: 2013-04-28 22:48+0200\n"
+"PO-Revision-Date: 2013-04-29 21:39+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -815,9 +815,9 @@ msgstr " "
 
 #: ../code/application/views/includes/side_search_box.php:16
 #: ../code/application/views/helpfile/pofields.php:828
-#, fuzzy, php-format
+#, php-format
 msgid "Enter your dates"
-msgstr "Zadejte datum."
+msgstr "Zadejte svá data"
 
 #: ../code/application/views/includes/side_search_box.php:18
 #: ../code/application/views/mobile/city_view.php:4
@@ -4648,7 +4648,6 @@ msgid "Date"
 msgstr "Datum"
 
 #: ../code/application/views/hw/booking_end_view.php:165
-#, fuzzy
 msgid "Amount already paid"
 msgstr "Již zaplacená částka:"
 
@@ -4863,17 +4862,17 @@ msgstr "váš výběr"
 #: ../code/application/views/hw/booking_avail_view.php:744
 #: ../code/application/views/hw/booking_view.php:125
 #: ../code/application/views/hw/booking_view.php:1047
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d%% of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d%%) is payable upon arrival. You "
 "will find the hotel's contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Nám zaplatíte pouze zálohu (10%% z celé částky) pro zabezpečení vaší "
-"rezervace. Zbytek (90%%) je splatný po příjezdu na místo. Informace o vašem "
-"ubytování (email, adresu, telefonní číslo, …) najdete ve vašem potvrzovacím "
-"emailu poté co si uděláte rezervaci.  "
+"Zaplatíte nyní pouze zálohu (%d%% z celkové částky) jako potvrzení a "
+"zajištění vaší rezervace. Zbývající částku (%d%%) splatíte při příjezdu. "
+"Informaci o ubytovacím zařízení (email,adresu,telefonní číslo…) naleznete v "
+"potvrzujícím emailu po dokončení rezervace."
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
@@ -4890,9 +4889,9 @@ msgstr "Dostali jste nejlepší cenu"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hw/booking_view.php:303
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d%%)"
-msgstr "Záloha splatná nyní (%d)"
+msgstr "Záloha splatná nyní (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:790
 #: ../code/application/views/hw/booking_avail_view.php:886
@@ -4953,9 +4952,9 @@ msgid "Prix (lit)"
 msgstr "Cena"
 
 #: ../code/application/views/hw/booking_avail_view.php:978
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d%%)"
-msgstr "Záloha (%d)"
+msgstr "Záloha (%d%%)"
 
 #: ../code/application/views/hw/booking_avail_view.php:1007
 #: ../code/application/views/hw/booking_avail_view.php:1013
